k8s/deploy/frontend/base/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
    level: stage
  name: frontend-preview-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http

    - name: metrics
      port: 9113
      targetPort: metrics
  type: ClusterIP
  selector:
    app: frontend
