k8s/deploy/frontend/base/preview-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
    level: stage
  name: frontend-preview-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
  selector:
    app: frontend
