k8s/deploy/frontend/base/preview-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - preview.chat.operation.com
    secretName: chat-frontend-tls-secret
  rules:
  - host: "preview.chat.operation.com" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-preview-svc
            port:
              number: 80
